# chess-engine

./: .gitignore  CMakeLists.txt  main.cpp
Board/: Board.h  Board_Analyser.cpp  Board_Analyser.h  Zobrist.cpp  Zobrist.h
Game/: game.h
Moves/: Move.cpp  Move.h  Move_Generation.cpp  Move_Generation.h  Tables.cpp
core/: Bitboard_Operations.h  Book.cpp  Book.h  PGN_Parser.cpp  PGN_Parser.h  magnus_pgn.txt
engine/: Evaluation.cpp  Evaluation.h  King.cpp  King.h  Pawns.cpp  Pawns.h  Phases.cpp  Phases.h  Search.cpp  Search.h  perft.cpp  perft.h
optimised/: Attack_Tables.cpp  Attack_Tables.h  CMakeLists.txt  Move_Generator.cpp  Move_Generator.h  main.cpp
optimised/core/: Declarations.h  board.h  move.h
optimised/engine/: Game.cpp  Game.h  Perft.cpp  Perft.h
original/: CMakeLists.txt  main.cpp
original/Board/: Board.h  Zobrist.h
original/Game/: game.h
original/Moves/: Move.h  Move_Generation.cpp  Move_Generation.h  Tables.h  performance_test.h
original/core/: Bitboard_Operations.h  PGN_Parser.cpp  PGN_Parser.h
original/engine/: Evaluation.cpp  King.h  Pawns.cpp  Search.cpp  Search.h  perft.h
src/: Attack_Tables.cpp  Attack_Tables.h  Move_Generator.cpp  Move_Generator.h  comparison.h  main.cpp
src/core/: Declarations.h  board.h  move.h
src/engine/: Game.cpp  Game.h  Perft.cpp  Perft.h
